--- a/styles.css
+++ b/styles.css
@@ -10,33 +10,33 @@
   --primary-background: #e2f0e3;
   --primary-font-color: #ce9700;
   --secondary-font-color: #fb0;
-  --thin-border-gray: 0.1rem solid rgb(211, 211, 211);
-  --thin-border-green: 0.1rem solid #015f63;
-  --box-shadow-light: 0 0.4rem 0.4rem 0 rgba(0, 0, 0, 0.2),
-    0 0.6rem 2rem 0 rgba(0, 0, 0, 0.19);
+  --thin-border-gray: 0.063rem solid rgb(211, 211, 211);
+  --thin-border-green: 0.063rem solid #015f63;
+  --box-shadow-light: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.2),
+    0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0.19);
   --color-white: #fff;
   --color-black: #000;
   --value-0: 0;
-  --value-0-25: 0.25rem;
-  --value-0-5: 0.5rem;
-  --value-0-75: 0.75rem;
-  --value-1: 1rem;
-  --value-1-25: 1.25rem;
-  --value-1-3: 1.3rem;
-  --value-1-4: 1.4rem;
-  --value-1-5: 1.5rem;
-  --value-1-6: 1.6rem;
-  --value-1-75: 1.75rem;
-  --value-2: 2rem;
-  --value-2-25: 2.25rem;
-  --value-2-5: 2.5rem;
-  --value-2-75: 2.75rem;
-  --value-3: 3rem;
-  --value-5: 5rem;
-  --header-height: 16rem;
+  --value-0-25: 0.156rem;
+  --value-0-5: 0.313rem;
+  --value-0-75: 0.469rem;
+  --value-1: 0.625rem;
+  --value-1-25: 0.781rem;
+  --value-1-3: 0.813rem;
+  --value-1-4: 0.875rem;
+  --value-1-5: 0.938rem;
+  --value-1-6: 1rem;
+  --value-1-75: 1.094rem;
+  --value-2: 1.25rem;
+  --value-2-25: 1.406rem;
+  --value-2-5: 1.563rem;
+  --value-2-75: 1.719rem;
+  --value-3: 1.875rem;
+  --value-5: 3.125rem;
+  --header-height: 10rem;
 }
 html {
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
   font-family: "Open sans", Arial, sans-serif;
 }
 body {
@@ -51,7 +51,7 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin: 1.25rem 1.25rem 1rem;
+  margin: 0.781rem 0.781rem 0.625rem;
   -webkit-box-shadow: var(--box-shadow-light);
   box-shadow: var(--box-shadow-light);
   border-radius: var(--value-0-5);
@@ -85,9 +85,9 @@ body {
 .header-titles h2 {
   font-size: var(--value-2-25);
   font-weight: lighter;
-  border-bottom: 0.1rem solid grey;
-  text-shadow: 0.1rem 0.1rem 0.2rem #dfdfdf, 0 0 2.5rem green,
-    0 0 0.5rem darkgreen;
+  border-bottom: 0.063rem solid grey;
+  text-shadow: 0.063rem 0.063rem 0.125rem #dfdfdf, 0 0 1.563rem green,
+    0 0 0.313rem darkgreen;
   color: var(--color-white);
 }
 .footer-links-icons,
@@ -138,7 +138,7 @@ body {
   padding-bottom: var(--value-2);
 }
 .header-image-portrait {
-  width: 14rem;
+  width: 8.75rem;
   height: auto;
   /* aspect-ratio: 570 / 650; */
   border-radius: var(--value-3);
@@ -175,7 +175,7 @@ main {
 .strategies-title,
 .strengths-title {
   color: var(--primary-font-color);
-  font-size: 1.7rem;
+  font-size: 1.063rem;
   margin: var(--value-2);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -187,7 +187,7 @@ main {
   -ms-flex-align: center;
   align-items: center;
   gap: var(--value-1);
-  border-bottom: 0.1rem solid var(--primary-font-color);
+  border-bottom: 0.063rem solid var(--primary-font-color);
   padding-bottom: var(--value-1);
 }
 .resume-text,
@@ -215,8 +215,8 @@ main {
 }
 .education-ul,
 .experiences-ul {
-  border-left: 0.1rem solid var(--primary-font-color);
-  padding-left: 1.1rem;
+  border-left: 0.063rem solid var(--primary-font-color);
+  padding-left: 0.688rem;
 }
 .education-ul,
 .experiences-ul,
@@ -282,7 +282,7 @@ main {
   display: inline-block;
   margin-bottom: var(--value-0-5);
   font-size: var(--value-1-3);
-  border-bottom: 0.1rem solid grey;
+  border-bottom: 0.063rem solid grey;
 }
 .education-large {
   display: none;
@@ -328,7 +328,7 @@ footer {
 }
 .footer-paragraph {
   background-color: #303030;
-  padding: 5rem 2rem;
+  padding: 3.125rem 1.25rem;
   font-size: var(--value-2);
   text-align: center;
   width: 100%;
@@ -357,7 +357,7 @@ footer {
 }
 @media screen and (min-width: 575px) {
   .header {
-    margin: 1.25rem 1.25rem 0.5rem;
+    margin: 0.781rem 0.781rem 0.313rem;
   }
   .header-titles h2 {
     width: 50%;
@@ -514,7 +514,7 @@ footer {
     grid-column: 1 / 2;
   }
   .header-image-portrait {
-    width: 12rem;
+    width: 7.5rem;
     height: auto;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -1629,7 +1629,7 @@ footer {
   }
   .education-large {
     display: block;
-    margin-top: -0.5rem;
+    margin-top: -0.313rem;
     border-radius: var(--value-0);
     grid-row: 11 / -1;
     grid-column: 5 / -1;
@@ -1707,7 +1707,7 @@ footer {
   }
   .education-title,
   .experiences-title {
-    margin: 1rem 1rem 0;
+    margin: 0.625rem 0.625rem 0;
     font-size: var(--value-1-6);
   }
   .strengths-ul {
