--- a/styles.css
+++ b/styles.css
@@ -7,33 +7,40 @@
 }
 
 :root {
-  --primary-background: #e2f0e3;
+  --primary-background: rgb(226, 240, 227);
+  --primary-dark-background: rgb(201, 233, 203);
   --primary-font-color: #ce9700;
   --secondary-font-color: #fb0;
-  --thin-border-gray: 0.063rem solid rgb(211, 211, 211);
-  --thin-border-green: 0.063rem solid #015f63;
-  --box-shadow-light: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.2),
-    0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0.19);
+  --thin-border-gray: 0.1rem solid rgb(211, 211, 211);
+  --thin-border-green: 0.1rem solid #015f63;
+  --box-shadow-light: 0 0.4rem 0.4rem 0 rgba(0, 0, 0, 0.2),
+    0 0.6rem 2rem 0 rgba(0, 0, 0, 0.19);
   --color-white: #fff;
   --color-black: #000;
   --value-0: 0;
-  --value-0-25: 0.156rem;
-  --value-0-5: 0.313rem;
-  --value-0-75: 0.469rem;
-  --value-1: 0.625rem;
-  --value-1-25: 0.781rem;
-  --value-1-3: 0.813rem;
-  --value-1-4: 0.875rem;
-  --value-1-5: 0.938rem;
-  --value-1-6: 1rem;
-  --value-1-75: 1.094rem;
-  --value-2: 1.25rem;
-  --value-2-25: 1.406rem;
-  --value-2-5: 1.563rem;
-  --value-2-75: 1.719rem;
-  --value-3: 1.875rem;
-  --value-5: 3.125rem;
-  --header-height: 10rem;
+  --value-0-25: 0.25rem;
+  --value-0-50: 0.5rem;
+  --value-0-70: 0.7rem;
+  --value-0-75: 0.75rem;
+  --value-0-80: 0.8rem;
+  --value-0-85: 0.85rem;
+  --value-0-87: 0.87rem;
+  --value-0-88: 0.88rem;
+  --value-0-90: 0.9rem;
+  --value-1: 1rem;
+  --value-1-25: 1.25rem;
+  --value-1-3: 1.3rem;
+  --value-1-4: 1.4rem;
+  --value-1-5: 1.5rem;
+  --value-1-6: 1.6rem;
+  --value-1-75: 1.75rem;
+  --value-2: 2rem;
+  --value-2-25: 2.25rem;
+  --value-2-5: 2.5rem;
+  --value-2-75: 2.75rem;
+  --value-3: 3rem;
+  --value-5: 5rem;
+  --header-height: 16rem;
 }
 
 html {
@@ -44,7 +51,7 @@ html {
 @media screen and (min-width: 1024px) {
   body {
     margin: 0 auto;
-    padding: 5px;
+    /* padding: 5px; */
     max-width: 210mm;
     max-height: 297mm;
     width: 210mm;
@@ -53,31 +60,185 @@ html {
     border-radius: var(--value-0-5);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(10, 1fr);
+    grid-template-rows: repeat(12, 1fr);
   }
 
-  .header {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 2;
-    grid-column-end: -1;
-    background: #9ff9fc;
+  /* Global 
+  ----------*/
+
+  p {
+    font-size: var(--value-0-85);
   }
+
+  h2 {
+    font-size: var(--value-1);
+    color: var(--primary-font-color);
+    border-bottom: 0.1rem solid var(--primary-font-color);
+    padding-bottom: var(--value-0-50);
+    margin-top: var(--value-0-50);
+  }
+
+  h3 {
+    font-size: var(--value-0-87);
+  }
+
+  .date-info {
+    font-weight: lighter;
+    font-size: var(--value-0-70);
+    font-style: italic;
+    display: inline-block;
+    margin-bottom: var(--value-0-25);
+    border-bottom: 0.1rem solid grey;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  /* Aside
+  ---------*/
 
   .aside {
     grid-row-start: 1;
     grid-row-end: -1;
     grid-column-start: 1;
     grid-column-end: 2;
-    background: #fcdf9f;
+    background: var(--primary-background);
+    padding-left: var(--value-1);
+    padding-right: var(--value-1);
   }
+
+  .aside h2 {
+    margin-top: var(--value-0-50);
+  }
+
+  .strategies-text {
+    margin-top: var(--value-0-50);
+  }
+
+  .aside ul {
+    margin-left: 0.75rem;
+    color: var(--primary-font-color);
+  }
+
+  .aside li * {
+    color: var(--color-black);
+  }
+
+  .aside-links-icons {
+    margin-top: 0.5rem;
+    font-size: 0.85rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .aside i {
+    color: var(--primary-font-color);
+  }
+
+  .strengths-span {
+    font-size: var(--value-0-85);
+  }
+
+  .aside h3 {
+    font-size: var(--value-0-85);
+    /* padding: 0.15rem; */
+    /* background-color: var(--primary-dark-background); */
+  }
+
+  .aside article {
+    padding-top: 0.15rem;
+    margin-bottom: 0.15rem;
+  }
+
+  .tools-span {
+    font-size: var(--value-0-85);
+  }
+
+  .aside a {
+    text-decoration: underline;
+    color: var(--color-black);
+    /* padding: 0.1rem; */
+  }
+
+  .aside-links-icons {
+    display: grid;
+    gap: 0.25rem;
+  }
+  .aside-links-icons a {
+    text-decoration: none;
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  /* Header 
+  ----------*/
+
+  .header {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: -1;
+    /* background: #9ff9fc; */
+    padding-left: var(--value-1);
+    padding-top: var(--value-1);
+  }
+
+  .header h1 {
+    color: var(--primary-font-color);
+    font-size: var(--value-1-5);
+    font-weight: lighter;
+    padding: 0;
+    margin: 0;
+  }
+  .header h2 {
+    color: #000;
+    font-size: var(--value-1-25);
+    font-weight: lighter;
+    border-bottom: 0.1rem solid grey;
+    width: 60%;
+    padding-bottom: var(--value-0-5);
+    margin: 0;
+  }
+
+  /* Main 
+  --------*/
+
   .main {
     grid-row-start: 2;
     grid-row-end: -1;
     grid-column-start: 2;
     grid-column-end: -1;
-    background: #b2fc9f;
+    /* background: #b2fc9f; */
+    padding: var(--value-0-75);
   }
+
+  .education-ul,
+  .experiences-ul {
+    padding-left: 0.65rem;
+    color: var(--primary-font-color);
+    border-left: 0.1rem solid var(--primary-font-color);
+  }
+
+  .education-ul article,
+  .experiences-ul article {
+    color: var(--color-black);
+  }
+
+  .main a {
+    text-decoration: none;
+    background: var(--primary-background);
+    color: var(--color-black);
+    cursor: pointer;
+  }
+  .education-inner-span::before {
+    content: " \25B4";
+    color: rgb(61, 138, 54);
+  }
+
+  /* Footer 
+  ----------*/
+
   .footer {
     display: none;
   }
