--- a/print.css
+++ b/print.css
@@ -14,22 +14,23 @@
   }
 
   :root {
-    --primary-background: rgb(226, 240, 227);
-    --primary-dark-background: rgb(201, 233, 203);
-    --primary-font-color: #ce9700;
-    --secondary-font-color: #fb0;
+    --primary-color: #ffc800;
+    --aside-text-color: #424242;
+    --main-text-color: #424242;
     --thin-border-gray: 0.1rem solid rgb(211, 211, 211);
     --thin-border-green: 0.1rem solid #015f63;
     --box-shadow-light: 0 0.4rem 0.4rem 0 rgba(0, 0, 0, 0.2),
       0 0.6rem 2rem 0 rgba(0, 0, 0, 0.19);
     --color-white: #fff;
-    --color-black: #000;
+    --main-text-color: #000;
+    --main-text-color: #424242;
     --value-0: 0;
     --value-0-25: 0.25rem;
     --value-0-50: 0.5rem;
     --value-0-70: 0.7rem;
     --value-0-75: 0.75rem;
     --value-0-80: 0.8rem;
+    --value-0-82: 0.82rem;
     --value-0-85: 0.85rem;
     --value-0-87: 0.87rem;
     --value-0-88: 0.88rem;
@@ -52,48 +53,39 @@
 
   html {
     font-family: "Open sans", Arial, sans-serif;
+    background-color: #fff;
   }
 
   body {
     margin: 0 auto;
-    /* padding: 5px; */
     max-width: 210mm;
     max-height: 297mm;
     width: 210mm;
     height: 297mm;
-    border: var(--thin-border-gray);
-    border-radius: var(--value-0-5);
+    border: 1px solid var(--primary-color);
+    border-radius: var(--value-0-50);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(12, 1fr);
+    color: var(--main-text-color);
   }
 
   /* Global 
   ----------*/
 
   p {
-    font-size: var(--value-0-85);
+    font-size: var(--value-0-82);
   }
 
   h2 {
     font-size: var(--value-1);
-    color: var(--primary-font-color);
-    border-bottom: 0.1rem solid var(--primary-font-color);
     padding-bottom: var(--value-0-50);
-    margin-top: var(--value-0-50);
+    margin-top: var(--value-0-75);
+    margin-bottom: var(--value-0-5);
   }
 
   h3 {
     font-size: var(--value-0-87);
-  }
-
-  .date-info {
-    font-weight: lighter;
-    font-size: var(--value-0-70);
-    font-style: italic;
-    display: inline-block;
-    margin-bottom: var(--value-0-25);
-    border-bottom: 0.1rem solid grey;
   }
 
   a {
@@ -108,13 +100,16 @@
     grid-row-end: -1;
     grid-column-start: 1;
     grid-column-end: 2;
-    background: var(--primary-background);
+    background: var(--primary-color);
     padding-left: var(--value-1);
     padding-right: var(--value-1);
   }
 
   .aside h2 {
-    margin-top: var(--value-0-50);
+    border-bottom: 0.1rem solid var(--aside-text-color);
+  }
+  .contact-links {
+    margin-top: 2rem;
   }
 
   .strategies-text {
@@ -123,11 +118,6 @@
 
   .aside ul {
     margin-left: 0.75rem;
-    color: var(--primary-font-color);
-  }
-
-  .aside li * {
-    color: var(--color-black);
   }
 
   .aside-links-icons {
@@ -137,18 +127,8 @@
     flex-wrap: wrap;
   }
 
-  .aside i {
-    color: var(--primary-font-color);
-  }
-
-  .strengths-span {
-    font-size: var(--value-0-85);
-  }
-
   .aside h3 {
     font-size: var(--value-0-85);
-    /* padding: 0.15rem; */
-    /* background-color: var(--primary-dark-background); */
   }
 
   .aside article {
@@ -160,10 +140,13 @@
     font-size: var(--value-0-85);
   }
 
+  .aside span {
+    font-size: var(--value-0-85);
+  }
+
   .aside a {
     text-decoration: underline;
-    color: var(--color-black);
-    /* padding: 0.1rem; */
+    padding: 0.1rem;
   }
 
   .aside-links-icons {
@@ -176,6 +159,15 @@
     gap: 0.5rem;
   }
 
+  .aside h2,
+  .aside h3,
+  .aside a,
+  .aside span,
+  .aside i,
+  .aside li {
+    color: var(--aside-text-color);
+  }
+
   /* Header 
   ----------*/
 
@@ -184,61 +176,98 @@
     grid-row-end: 2;
     grid-column-start: 2;
     grid-column-end: -1;
-    /* background: #9ff9fc; */
     padding-left: var(--value-1);
     padding-top: var(--value-1);
   }
 
   .header h1 {
-    color: var(--primary-font-color);
-    font-size: var(--value-1-5);
+    font-size: var(--value-1-75);
     font-weight: lighter;
     padding: 0;
-    margin: 0;
+    margin-bottom: var(--value-0-50);
   }
+
+  .header-span-firstname {
+    color: var(--primary-color);
+  }
+
+  .header-span-title {
+    padding-bottom: 5px;
+    border-bottom: 0.1rem solid var(--primary-color);
+  }
+
   .header h2 {
     color: #000;
     font-size: var(--value-1-25);
     font-weight: lighter;
-    border-bottom: 0.1rem solid grey;
-    width: 60%;
-    padding-bottom: var(--value-0-5);
+    padding-bottom: var(--value-0-50);
     margin: 0;
+    border: none;
   }
 
   /* Main 
   --------*/
+
+  .date-info {
+    font-weight: lighter;
+    font-size: var(--value-0-70);
+    font-style: italic;
+    display: inline-block;
+    margin-bottom: var(--value-0-25);
+    border-bottom: 0.1rem solid var(--main-text-color);
+  }
 
   .main {
     grid-row-start: 2;
     grid-row-end: -1;
     grid-column-start: 2;
     grid-column-end: -1;
-    /* background: #b2fc9f; */
     padding: var(--value-0-75);
   }
 
+  h2 {
+    border-bottom: 0.1rem solid var(--primary-color);
+  }
+
+  .resume-text {
+    text-align: justify;
+  }
+
+  .projects-ul,
   .education-ul,
   .experiences-ul {
-    padding-left: 0.65rem;
-    color: var(--primary-font-color);
-    border-left: 0.1rem solid var(--primary-font-color);
+    padding-left: 1rem;
+    color: var(--primary-color);
   }
 
+  .projects-ul article,
   .education-ul article,
   .experiences-ul article {
-    color: var(--color-black);
+    color: var(--main-text-color);
   }
 
+  .main li {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .main h3 {
+    margin-bottom: 0.25rem;
+  }
   .main a {
     text-decoration: none;
-    background: var(--primary-background);
-    color: var(--color-black);
+    background-color: rgba(231, 231, 231, 0.555);
+    color: var(--main-text-color);
     cursor: pointer;
   }
+
+  .main a:hover {
+    background-color: rgba(231, 231, 231, 0.87);
+  }
+  .projects-inner-span::before,
   .education-inner-span::before {
     content: " \25B4";
-    color: rgb(61, 138, 54);
+    color: var(--primary-color);
   }
 
   /* Final note */
@@ -246,14 +275,6 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    background-color: #818181;
-    color: #fff;
-  }
-
-  /* Footer 
-  ----------*/
-
-  .footer {
-    display: none;
+    background-color: var(--primary-color);
   }
 }
