--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ html {
   h2 {
     font-size: var(--value-1);
     padding-bottom: var(--value-0-50);
-    margin-top: var(--value-0-75);
+    margin-top: var(--value-0-50);
     margin-bottom: var(--value-0-5);
   }
 
@@ -97,6 +97,7 @@ html {
     background: var(--primary-color);
     padding-left: var(--value-1);
     padding-right: var(--value-1);
+    border-top-left-radius: var(--value-0-50);
   }
 
   .aside h2 {
@@ -241,8 +242,8 @@ html {
   }
 
   .main li {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin-top: 0.45rem;
+    margin-bottom: 0.45rem;
   }
 
   .main h3 {
@@ -267,8 +268,10 @@ html {
   /* Final note */
   .final-note {
     display: flex;
+    font-size: 0.65rem;
     justify-content: center;
     text-align: center;
     background-color: var(--primary-color);
+    border-bottom-left-radius: var(--value-0-50);
   }
 }
