--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,13 @@
 
 :root {
   --primary-color: #ffc800;
-  --aside-text-color: #424242;
-  --main-text-color: #424242;
-  --thin-border-gray: 0.1rem solid rgb(211, 211, 211);
-  --thin-border-green: 0.1rem solid #015f63;
+  --aside-text-color: #2b2b2b;
+  --main-text-color: #3b3b3b;
+  --thin-border-gray: 1px solid rgb(211, 211, 211);
+  --thin-border-green: 1px solid #015f63;
   --box-shadow-light: 0 0.4rem 0.4rem 0 rgba(0, 0, 0, 0.2),
     0 0.6rem 2rem 0 rgba(0, 0, 0, 0.19);
   --color-white: #fff;
-  --main-text-color: #000;
-  --main-text-color: #424242;
   --value-0: 0;
   --value-0-25: 0.25rem;
   --value-0-50: 0.5rem;
@@ -101,7 +99,7 @@ html {
   }
 
   .aside h2 {
-    border-bottom: 0.1rem solid var(--aside-text-color);
+    border-bottom: 1px solid var(--aside-text-color);
   }
   .contact-links {
     margin-top: 2rem;
@@ -141,7 +139,7 @@ html {
 
   .aside a {
     text-decoration: underline;
-    padding: 0.1rem;
+    padding: 1px;
   }
 
   .aside-links-icons {
@@ -188,7 +186,7 @@ html {
 
   .header-span-title {
     padding-bottom: 5px;
-    border-bottom: 0.1rem solid var(--primary-color);
+    border-bottom: 1px solid var(--primary-color);
   }
 
   .header h2 {
@@ -209,7 +207,7 @@ html {
     font-style: italic;
     display: inline-block;
     margin-bottom: var(--value-0-25);
-    border-bottom: 0.1rem solid var(--main-text-color);
+    border-bottom: 1px solid var(--main-text-color);
   }
 
   .main {
@@ -221,7 +219,7 @@ html {
   }
 
   h2 {
-    border-bottom: 0.1rem solid var(--primary-color);
+    border-bottom: 1px solid var(--primary-color);
   }
 
   .resume-text {
